# skshsks

./: Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  researcher.py  supervisor.py  validator.py
app/tool-api/: pyproject.toml
app/tool-api/src/tool_api/: __init__.py  config.py  dependencies.py  main.py
app/tool-api/src/tool_api/routers/: health.py  nodes.py  tool.py
app/tool-api/src/tool_api/services/: __init__.py  health.py  nodes.py  tool.py
app/tool-api/src/tool_api/tests/: test_api.py
core/: __init__.py  state_manager.py  vector_db.py
tools/: file_utils.py  static_analysis.py
